--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Your Name / Site Title"
+locale                   : "Oxford"
+title                    : "Nikolas Karefyllidis / DPhil Student"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
