--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "Oxford"
-title                    : " "
+locale                   : "Oxford, UK"
+title                    : "Nikolas Karefyllidis "
 title_separator          : "-"
 name                     : &name "Nikolas Karefyllidis"
 description              : &description "DPhil Canditate | University of Oxford"
