--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "Oxford, UK"
-title                    : "Nikolas Karefyllidis "
+title                    : "Nikolas Karefyllidis MSc."
 title_separator          : "-"
 name                     : &name "Nikolas Karefyllidis"
 description              : &description "DPhil Canditate | University of Oxford"
